--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day 58 Task | Cohort 2.0</title>
 </head>
 <body>
-    <!-- <script src="script1.js"></script> -->
-    <script src="script2.js"></script>
+    <script src="script1.js" defer></script>
+    <script src="script2.js" defer></script>
 </body>
 </html>
